# caldata-mdsa-training

./: .pre-commit-config.yaml  .yamllint  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pre-commit.yml
cloud-data-warehouses/snowflake/: index.html
code/ci-cd/: index.html
code/devops/: index.html
code/git/: index.html
code/github/: index.html
code/loading-data/: index.html
code/local-dev-setup/: index.html
code/local-repo-setup/: index.html
concepts-tools/: index.html
data-transformation/dbt/: index.html
data-transformation/dbt-cloud/: index.html
data-transformation/dbt-cloud-practice/: index.html
data-transformation/dbt-core/: index.html
data-transformation/dbt-core-practice/: index.html
data-transformation/dbt-practice-answers/: index.html
dbt/cloud/: index.html
dbt/core/: index.html
docs/: concepts-tools.md  index.md  learning-path.md
docs/cloud-data-warehouses/: snowflake.md
docs/code/: ci-cd.md  cicd.md  devops.md  git.md  github.md  loading-data.md  local-dev-setup.md  local-repo-setup.md
docs/data-transformation/: dbt-cloud-exercises.md  dbt-cloud-practice.md  dbt-cloud.md  dbt-core-exercises.md  dbt-core-practice.md  dbt-core.md  dbt-practice-answers.md  dbt.md  local-repo-setup.md
docs/dbt/: cloud.md
docs/git/: devops.md  github.md
docs/javascript/: quiz.js
docs/javascripts/: quiz.js
docs/stylesheets/: extra.css
git/devops/: index.html
git/git/: index.html
git/github/: index.html
learning-path/: index.html
search/: search_index.json
(+23 files in other folders)
