[tool.poetry]
package-mode = false
name = "caldata-mdsa-training"
version = "0.1.0"
description = ""
authors = ["Britt Allen <britt.allen@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "~9.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
