[project]
name = "caldata-mdsa-training"
version = "0.1.0"
description = ""
authors = ["Britt Allen <britt.allen@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "mkdocs-material~=9.6.14"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0"
]
